# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
include/glog/: logging.h
src/: CMakeLists.txt  main.cpp
src/core/: pbrt.h  transform.cpp
src/display/: canvas.cpp  canvas.h
src/exes/: chapter10.cpp  chapter16.cpp  chapter8.cpp  main.cpp
src/extras/: obj_parser.cpp  obj_parser.h
src/filters/: allFilters.cpp  allFilters.hpp  boxFilter.hpp  gaussianFilter.hpp  lanczosFilter.h  mitchellFilter.h  triangleFilter.hpp
src/images/: pmm_writer.cpp  pmm_writer.h
src/lights/: direction_light.cpp  direction_light.h  point_light.cpp  point_light.h
src/materials/: material.cpp  material.h
src/patterns/: gradient_pattern.cpp  gradient_pattern.h  pattern.h  ring_pattern.cpp  ring_pattern.h  striped_pattern.cpp  striped_pattern.h
src/primitives/: color.cpp  color.h  colorTest.cpp  intersection.cpp  intersection.h  intersections.cpp  intersections.h  math.h  matrix.cpp  matrix.h  newPrimitives.cpp  newPrimitives.h  ray.cpp  ray.h  tuple.cpp  tuple.h
src/samplers/: stratified.cpp  stratified.h
src/scene/: camera.cpp  camera.h  computations.cpp  computations.h  world.cpp  world.h
src/shapes/: bounds.cpp  bounds.h  constructive_solid_geometry.cpp  constructive_solid_geometry.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  material.cpp  material.h  plane.cpp  plane.h  shape.cpp  shape.h  smooth_triangle.cpp  smooth_triangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/tests/: cubeTest.cpp  cylinderTest.cpp  lightingTest.cpp  patternTest.cpp  reflectTest.cpp  sceneTest.cpp  shadowTest.cpp  sphereTest.cpp  triangleTest.cpp  tupleTest.cpp
